force-app/main/default/objects/SVC_ContactChannelSurvey__c/SVC_ContactChannelSurvey__c.object-meta.xml
<CustomObject>
    <description>SFP-10420 - Survey responses inserted via the integration API user to store the responses for the post call/chat satisfaction survey.</description>
    <label>Contact Channel Survey</label>
    <nameField>
        <displayFormat>CCS-{0000000}</displayFormat>
        <label>Contact Channel Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Channel Surveys</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>