force-app/main/default/objects/SVC_ContactChannelSurvey__c/fields/SVC_ACContactChannel__c.field-meta.xml
<CustomField>
    <fullName>SVC_ACContactChannel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFP-10420 Lookup to the AC Contact Object which is created by the AC CTI adapter</description>
    <label>AC Contact Channel</label>
    <referenceTo>amazonconnect__AC_ContactChannels__c</referenceTo>
    <relationshipLabel>Contact Channel Surveys</relationshipLabel>
    <relationshipName>SVC_ContactChannelSurveys</relationshipName>
    <type>Lookup</type>
</CustomField>