force-app/main/default/objects/SVC_ContactChannelSurvey__c/fields/SVC_AchievedPurpose__c.field-meta.xml
<CustomField>
    <fullName>SVC_AchievedPurpose__c</fullName>
    <description>SFP-10420 Indicates if the agent managed to achieve everything they intended during their interaction?</description>
    <inlineHelpText>Did you manage to achieve everything you intended during this interaction?</inlineHelpText>
    <label>Achieved Purpose?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>