force-app/main/default/objects/SVC_ContactChannelSurvey__c/fields/SVC_AgentRating__c.field-meta.xml
<CustomField>
    <fullName>SVC_AgentRating__c</fullName>
    <description>SFP-10420 Indicates the agent&apos;s rating during the interaction with a customer.</description>
    <inlineHelpText>Please rate your experience with the agent who assisted you on this interaction on a scale of 1 to 10?</inlineHelpText>
    <label>Agent Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>