force-app/main/default/objects/SVC_ContactChannelSurvey__c/fields/SVC_AgentRatingNumber__c.field-meta.xml
<CustomField>
    <fullName>SVC_AgentRatingNumber__c</fullName>
    <description>SFP-10420 For reporting purposes, the Agent Rating needs to have a numerical equivalent in order to calculate its average.</description>
    <formula>VALUE( TEXT( SVC_AgentRating__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For reporting purposes, the Agent Rating needs to have a numerical equivalent in order to calculate its average.</inlineHelpText>
    <label>Agent Rating Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>