force-app/main/default/objects/SVC_ContactChannelSurvey__c/fields/SVC_NetPromoterScoreRating__c.field-meta.xml
<CustomField>
    <fullName>SVC_NetPromoterScoreRating__c</fullName>
    <description>SFP-10420 Indicates how likely the customer is to recommend Standard Bank to their friends and family.</description>
    <inlineHelpText>Please rate how likely you are to recommend Standard Bank to friends and family based on your experience on this interaction on a scale of 0 to 10?</inlineHelpText>
    <label>Net Promoter Score Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>