force-app/main/default/objects/SVC_ContactChannelSurvey__c/fields/SVC_SurveyComplete__c.field-meta.xml
<CustomField>
    <fullName>SVC_SurveyComplete__c</fullName>
    <description>SFP-10420 The survey is only indicated as complete when all 3 questions (achieved purpose, net promoter score rating and agent rating) have been answered.</description>
    <formula>AND(
    NOT(ISBLANK(TEXT(SVC_AchievedPurpose__c))),
    NOT(ISBLANK(TEXT(SVC_NetPromoterScoreRating__c))),
    NOT(ISBLANK(TEXT(SVC_AgentRating__c)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The survey is only indicated as complete when all 3 questions (achieved purpose, net promoter score rating and agent rating) have been answered.</inlineHelpText>
    <label>Survey Complete</label>
    <type>Checkbox</type>
</CustomField>